--- a/source/dsp56kEmu/dsp56kEmu.vcxproj
+++ b/source/dsp56kEmu/dsp56kEmu.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{A1AF8DA1-878F-498B-BBDD-9921536FCE43}</ProjectGuid>
     <RootNamespace>dsp56kEmu</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -41,11 +42,11 @@
     <_ProjectFileVersion>15.0.28307.799</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(IntDir)</OutDir>
+    <OutDir>../../temp/$(Configuration)$(Platform)/$(ProjectName)\</OutDir>
     <IntDir>../../temp/$(Configuration)$(Platform)/$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(IntDir)</OutDir>
+    <OutDir>../../temp/$(Configuration)$(Platform)/$(ProjectName)\</OutDir>
     <IntDir>../../temp/$(Configuration)$(Platform)/$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
