ESAI DSP 56362 audio interface preparations

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -1,14 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
 project(dsp56kEmu)
 
+add_library(dsp56kEmu STATIC)
+
 set(SOURCES
 agu.cpp agu.h
+audio.cpp audio.h
 buildconfig.h
 assert.cpp assert.h
 disasm.cpp disasm.h
 dsp.cpp dsp.h dsp_ops.inl
 error.cpp error.h
 essi.cpp essi.h
+esai.cpp esai.h
 fastmath.h
 instructioncache.cpp instructioncache.h
 interrupts.h
@@ -30,7 +34,8 @@ unittests.cpp unittests.h
 utils.cpp utils.h
 )
 
-add_library(dsp56kEmu STATIC ${SOURCES})
+target_sources(dsp56kEmu PRIVATE ${SOURCES})
+source_group("source" FILES ${SOURCES})
 
 if(WIN32)
 	target_link_libraries(dsp56kEmu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../dsp56k/CM56300.lib)
