Factor apart HI08 and HDI08! HI08 healed back to original.

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -14,7 +14,8 @@ error.cpp error.h
 essi.cpp essi.h
 esai.cpp esai.h
 fastmath.h
-hi08.cpp hi08.h
+hdi08.cpp hdi08.h
+hi08.h
 instructioncache.cpp instructioncache.h
 interrupts.h
 logging.cpp logging.h
