--- a/source/dsp56kEmu/dsp56kEmu.vcxproj.filters
+++ b/source/dsp56kEmu/dsp56kEmu.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="audio.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="hdi08.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="agu.h">
@@ -127,6 +130,9 @@
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="audio.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="hdi08.h">
       <Filter>Source</Filter>
     </ClInclude>
   </ItemGroup>
