--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -10,7 +10,8 @@ bitfield.h
 buildconfig.h
 assert.cpp assert.h
 disasm.cpp disasm.h
-dsp.cpp dsp.h dsp_ops.inl
+dsp.cpp dsp.h 
+dsp_ops.inl dsp_ops_helper.inl dsp_ops_jmp.inl
 error.cpp error.h
 essi.cpp essi.h
 esai.cpp esai.h
