move DSP thread to emulator project

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -14,6 +14,7 @@ disasm.cpp disasm.h
 dsp.cpp dsp.h 
 dsp_ops.inl dsp_ops_helper.inl 
 dsp_ops_bra.inl dsp_ops_jmp.inl dsp_ops_move.inl
+dspthread.cpp dspthread.h
 error.cpp error.h
 essi.cpp essi.h
 esai.cpp esai.h
