--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -51,3 +51,9 @@ source_group("source" FILES ${SOURCES})
 if(WIN32)
 	target_link_libraries(dsp56kEmu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../dsp56k/CM56300.lib)
 endif()
+
+if(UNIX AND NOT APPLE)
+	set(THREADS_PREFER_PTHREAD_FLAG ON)
+	find_package(Threads REQUIRED)
+	target_link_libraries(dsp56kEmu PRIVATE Threads::Threads)
+endif()
