make pthreads dependency public

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -56,5 +56,5 @@ endif()
 if(UNIX AND NOT APPLE)
 	set(THREADS_PREFER_PTHREAD_FLAG ON)
 	find_package(Threads REQUIRED)
-	target_link_libraries(dsp56kEmu PRIVATE Threads::Threads)
+	target_link_libraries(dsp56kEmu PUBLIC Threads::Threads)
 endif()
