jit dsp memory access

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -52,7 +52,7 @@ jitdecode.cpp jitdecode.h
 jitdspregs.cpp jitdspregs.h
 jitmem.cpp jitmem.h
 jitops.cpp jitops.h
-jitops_alu.inl jitops_ccr.inl jitops_helper.inl
+jitops_alu.inl jitops_ccr.inl jitops_helper.inl jitops_mem.inl
 jitregtracker.cpp jitregtracker.h
 jittypes.h
 jitunittests.cpp jitunittests.h
