fix wrong header in makefile

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -54,7 +54,7 @@ jitmem.cpp jitmem.h
 jitops.cpp jitops.h
 jitops_alu.inl jitops_ccr.inl jitops_decode.inl jitops_helper.inl jitops_jmp.inl jitops_mem.inl jitops_move.inl
 jitregtracker.cpp jitregtracker.h
-jittypes.h
+jitregtypes.h
 jitunittests.cpp jitunittests.h
 )
 
