better class name

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -56,7 +56,7 @@ jitops.cpp jitops.h
 jitops_alu.inl jitops_ccr.inl jitops_decode.inl jitops_helper.inl jitops_jmp.inl jitops_mem.inl jitops_move.inl
 jitregtracker.cpp jitregtracker.h
 jitregtypes.h
-jitregusage.cpp jitregusage.h
+jitstackhelper.cpp jitstackhelper.h
 jitunittests.cpp jitunittests.h
 )
 
