cmake: dsp56kEmu target exports include path to targets that link to it

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -91,3 +91,7 @@ if(UNIX AND NOT APPLE)
 endif()
 
 target_link_libraries(dsp56kEmu PUBLIC asmjit)
+
+# This should use ${PROJECT_SOURCE_DIR}/source if the top level of the repo
+# has the top level cmakelists.txt file.
+target_include_directories(dsp56kEmu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
