enable/disable JIT profiling by cmake define rather than relying on an own one

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -81,6 +81,7 @@ endif()
 if(WIN32)
 	if(${CMAKE_VS_PLATFORM_NAME} STREQUAL "x64")
 		target_link_libraries(dsp56kEmu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../vtuneSdk/lib64/jitprofiling.lib)
+		target_compile_definitions(dsp56kEmu PRIVATE DSP56K_USE_VTUNE_JIT_PROFILING_API)
 	endif()
 endif()
 
