switch from Assembler to Builder to be able to post-process generated code

--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -58,6 +58,7 @@ jitregtracker.cpp jitregtracker.h
 jitregtypes.h
 jitruntimedata.cpp jitruntimedata.h
 jitstackhelper.cpp jitstackhelper.h
+jittypes.h
 jitunittests.cpp jitunittests.h
 )
 
