--- a/source/dsp56kEmu/CMakeLists.txt
+++ b/source/dsp56kEmu/CMakeLists.txt
@@ -62,12 +62,14 @@ jitstackhelper.cpp jitstackhelper.h
 jittypes.h
 jitunittests.cpp jitunittests.h
 
+jitops_aarch64.inl
 jitops_alu_aarch64.inl
 jitops_ccr_aarch64.inl
 jitops_decode_aarch64.inl
 jitops_helper_aarch64.inl
 jitops_jmp_aarch64.inl
 
+jitops_x64.inl
 jitops_alu_x64.inl
 jitops_ccr_x64.inl
 jitops_decode_x64.inl
