--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(ASMJIT_STATIC TRUE)
 
 add_subdirectory(dsp56kEmu)
+add_subdirectory(dsp56kTestRunner)
 add_subdirectory(asmjit)
 
 # ----------------- command-line app
